# raytrace

./: CMakeLists.txt
src/: logging.hpp  main.cpp
